@@ -1,6 +1,6 @@
 DIST xbmc-12.3-generated-addons.tar.xz 52228 SHA256 477f789dea36969149fe118ecac1c4f3d8c3414772cc6c569be4aefb7e3f221e SHA512 2107271445c0cdcc14b348d011e12ffaaee75bbec506496798f64218256ab9e86cc0ada5edc1e70e509ac1ab366695fae4c15e90bd47fa57ccfe723d7e406b85 WHIRLPOOL 3963577539dee04f33dc4b988944f906688d77864d5e6a6b403e4578c9a91f2b77c256e6b4ed234a9722524c1c3acc626a28ff44c6376c09d93f24008abf54cd
 DIST xbmc-12.3.tar.gz 64615159 SHA256 3e15c960d034efdea5f92a7b74716cb48094842d077b076025fd8640754ede73 SHA512 abe5333f940460a2d40b04a4821f932b44c7605e0d4954e48781317aa25ee04e102b051165842094c5804024c637ca30506773dc3319aba7ab6dbfbe1973ccaa WHIRLPOOL 035cf5792c3c9785eb0a5227406c66298591bafc1251889d4e4a2742ffd715c374c0b6e092f5705db181412de9cae6d1eb3e9c370f3390858b4651f4c135fda1
-DIST xbmc-13.1-generated-addons.tar.xz 34384 SHA256 84366fd1bd1ef0a6a5e3332387d9e547c23cb2b97e5a89466c9088b96fbb17a1 SHA512 ed543c31630a56f76181c0d07cd95a92341af11bc977413fd8eec3d9031595ed3e9001f6773c8224aa799b57894ad3caaeb3d19b17f3fc08732db19fa5dee120 WHIRLPOOL 73c0575e7472b9ae21cfaaeb654e9bc510d8f4049260a4cf0ab8d3c50a76d3011f7b70167616bcb4fd2a44ac718f69607a49705c89e21071603ea6c29762762a
+DIST xbmc-13.1-generated-addons.tar.xz 54968 SHA256 fb0c265640e8d468ed094d83be5089274b7effc1ad1946c42ce21d831442d00e SHA512 7081e25621141eaf76d552fe648fcf9ff4697fc76991b2081806ae829af6094012194cfab93b0c836242197ded00ff88458b89ed6008532b38552d3114d2a776 WHIRLPOOL d83a4290af3e9a2a88dccf074d73692e34a9877d2ff7ff6a946a601b0c8e9d01105eb04bf1d28f62bf648d7221df787b42e52b416f2e924bfa5208342b3ef51a
 DIST xbmc-13.1.tar.gz 65758346 SHA256 344b604eae2ddb47c032dd7964d01f27e6fcd7a8873c84c0841d5da75961a678 SHA512 918126a85a8194dd49d5c82a5a56d2006b811ff5fca535e95bcc5ef4ab135c5907d01595c2ceb4accdc69aef5afc621adae249a1fef85425945560a646e970b0 WHIRLPOOL d429dd9a03974aedd5cd256f0cf1409dcf7434ec1bafeaa0fcdaaa0d8bb08442183143d514d33b1de4934a5e800b03a8f64df5abdd7203d8a0557638e124b53a
 DIST xbmc-9999-20121224-generated-addons.tar.xz 51980 SHA256 21284fe7ccee065eee10064f73a469722d6ffddf2fe882a0aefc07ea0eba0401 SHA512 48cdf8c685a48cd32462509962c888e8bc16254268d6fc891aacc5222da42e227ee5b6858c9e2b80d7d9fecc63862cd0c62c181a106212886a25f9be52778a1f WHIRLPOOL 12a31d33cc322b4afc3bdc829fc330a0971cab8a557a2f87885569d817a3664ae7506bfe7984322ec95b7786a246cd5edb10fceabfd96965ef33dd19cb934ae7
 DIST xbmc_backports-12-1.tar.bz2 5010 SHA256 a222c32f5a4a0a8690b1544674cfbfeddf81943e85b6ea716768b83c9eba5fa8 SHA512 19b29808f7a3a7b0642f8463bdd229041588d2f42952fe55a17ab69b5b259cde249eb763598893463218d0ab6c747bf3c81e045bdbf5655f9f5f2d2067cb35d2 WHIRLPOOL cc6870dabca8b53a1a6055a4218a8f9bbb2c031ab3b928040325fb121ea75ae6db431542660d28c3bc6900a904e2c0949d69651b2f63faffe8bc7f670d519f06
